further remove ricemap